--- a/npm init vite/package.json
+++ b/npm init vite/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node server.js"
+
   },
   "devDependencies": {
     "vite": "^6.0.5"
