--- a/npx/package.json
+++ b/npx/package.json
@@ -1,19 +1,14 @@
 {
-  "name": "milo_portfolio",
+  "name": "npx",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "start": "node server.js"
+    "preview": "vite preview"
   },
   "devDependencies": {
     "vite": "^6.1.0"
-  },
-  "dependencies": {
-    "gsap": "^3.12.7",
-    "three": "^0.172.0"
   }
 }
