--- a/npx/package.json
+++ b/npx/package.json
@@ -4,10 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
+  "dev": "vite",
+  "build": "npx vite build",  // Force npx to run vite
+  "start": "npx vite preview"
+}
+,
   "devDependencies": {
     "vite": "^6.1.0"
   }
