--- a/npx/package.json
+++ b/npx/package.json
@@ -4,10 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
+  "preinstall": "npm install --save-dev vite", 
+  "dev": "vite",
+  "build": "vite build",
+  "start": "vite preview"
+},
   "devDependencies": {
     "vite": "^6.1.0"
   }
